--- a/.classpath
+++ b/.classpath
@@ -3,12 +3,12 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="resources"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="lib" path="D:/Java Code/Other java stuff/lwjgl-2.8.5/jar/lwjgl.jar">
+	<classpathentry exported="true" kind="lib" path="D:/Java Code/Other java stuff/lwjgl-2.8.5/jar/lwjgl.jar">
 		<attributes>
 			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="D:/Java Code/Other java stuff/lwjgl-2.8.5/native/windows"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="D:/Java Code/Other java stuff/lwjgl-2.8.5/jar/lwjgl_util.jar">
+	<classpathentry exported="true" kind="lib" path="D:/Java Code/Other java stuff/lwjgl-2.8.5/jar/lwjgl_util.jar">
 		<attributes>
 			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="D:/Java Code/Other java stuff/lwjgl-2.8.5/native/windows"/>
 		</attributes>
